2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* activity.h (RM_activity_stats): Don't define.
	(RM_activity_info): Replace with this.
	(struct activity_stats): Add field pressure_local.  Make field
	pressure an 8 bit integer.
	(struct activity_stats_buffer): Remove structure.
	(struct activity_info): Replace with this structure.
	(activity_info_stats): Define.
	(activity_info_pressure): Likewise.
	(activity_stats): Remove method.
	(activity_info): Replace with this.

2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* stddef.h (do_debug): If DEBUG_ELIDE is defined to an integer,
	statically exclude those debug statements that have a level
	greater than or equal to it.

2008-06-26  Neal H. Walfield  <neal@gnu.org>

	* cap.h (RM_object_name): Define.
	(struct object_name): New struct.
	(object_name): New method.

2008-06-24  Neal H. Walfield  <neal@gnu.org>

	* cap.h (RM_object_discard): New define.
	(object_discard): New method.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity_stats): New fields available_local,
	pending_eviction and discarded.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* stddef.h (panic_): Use gcc's format attribute.

2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* cap.h (OBJECT_PRIORITY_DEFAULT): Define.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* exceptions.h (EXCEPTION_INFO_PRINTF): Clean up output.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* futex.h [! RM_INTERN]: Include <errno.h>.
	(futex_wait): On error, set ERRNO and return -1.
	(futex_timed_wait): Likewise.
	(futex_wake): Likewise.
	* mutex.h (ss_mutex_lock): If FUTEX_WAIT returns failure, print
	some debugging information.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* lock.h (SS_MUTEX_LOCK, SS_MUTEX_LOCK_WAIT, SS_MUTEX_UNLOCK,
	SS_MUTEX_TRYLOCK, SS_MUTEX_TRYLOCK_BLOCKED, SS_RMUTEX_LOCK,
	SS_RMUTEX_LOCK_INC, SS_RMUTEX_LOCK_WAIT, SS_RMUTEX_UNLOCK,
	SS_RMUTEX_UNLOCK_DEC, SS_RMUTEX_TRYLOCK, SS_RMUTEX_TRYLOCK_INC,