@@ -1,3 +1,8 @@
+2008-07-04  Neal H. Walfield  <neal@gnu.org>
+
+	* activity.h (ACTIVITY_MEMORY_POLICY): Reverse argument order.
+	(struct activity_memory_policy): Reverse order of fields.
+
 2008-06-27  Neal H. Walfield  <neal@gnu.org>
 
 	* activity.h (RM_activity_stats): Don't define.
